--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,6 @@ repositories {
 // In this section you declare the dependencies for your production and test code
 dependencies {
   compile 'com.github.kevinsawicki:http-request:5.6'
+  compile 'com.google.code.gson:gson:2.2.4'
   testCompile 'junit:junit:4.11'
 }
