--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
 dependencies {
   compile 'com.github.kevinsawicki:http-request:5.6'
   compile 'com.google.code.gson:gson:2.2.4'
-  compile 'org.abstractj.kalium:kalium:0.2.0'
+  
+  compile fileTree(dir: 'libs', include: '*.jar')
+  
   testCompile 'junit:junit:4.11'
 }
