--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-  compile 'com.github.kevinsawicki:http-request:5.6'
+  compile 'com.google.http-client:google-http-client:1.19.0'
+  compile 'com.google.http-client:google-http-client-gson:1.19.0'
+  compile 'com.google.http-client:google-http-client-android:1.19.0'
   compile 'com.google.code.gson:gson:2.2.4'
   compile 'com.google:bitcoinj:0.11.3'
   
