--- a/build.gradle
+++ b/build.gradle
@@ -9,12 +9,8 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
 
-eclipse {
-  jdt {
-    sourceCompatibility = 1.7
-    targetCompatibility = 1.7
-  }
-}
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 buildscript {
     repositories {
@@ -36,4 +32,13 @@ dependencies {
   compile fileTree(dir: 'libs', include: '*.jar')
   
   testCompile 'junit:junit:4.11'
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+artifacts {
+    archives sourcesJar
 }
