--- a/build.gradle
+++ b/build.gradle
@@ -24,12 +24,11 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-  compile 'com.squareup.okhttp:okhttp:2.0.0'
-  compile 'com.google.code.gson:gson:2.2.4'
+  compile 'com.squareup.okhttp:okhttp:2.1.0'
+  compile 'com.google.code.gson:gson:2.3.1'
   compile 'com.google.guava:guava:18.0'
-  compile 'com.madgag.spongycastle:prov:1.51.0.0'
-  
-  compile fileTree(dir: 'libs', include: '*.jar')
+  compile 'org.bitcoinj:bitcoinj-core:0.12.2'
+  compile 'org.abstractj.kalium:kalium:0.3.0'
   
   testCompile 'junit:junit:4.11'
 }
