--- a/build.gradle
+++ b/build.gradle
@@ -7,19 +7,16 @@
  */
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
-
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
 
 buildscript {
-    repositories {
-       	jcenter()
-    }
+  repositories {
+    jcenter()
+  }
 }
 
 repositories {
-	jcenter()
+	mavenCentral()
+  mavenLocal()
 }
 
 // In this section you declare the dependencies for your production and test code
@@ -27,8 +24,10 @@ dependencies {
   compile 'com.squareup.okhttp:okhttp:2.1.0'
   compile 'com.google.code.gson:gson:2.3.1'
   compile 'com.google.guava:guava:18.0'
-  compile 'org.bitcoinj:bitcoinj-core:0.12.2'
+  compile 'org.bitcoinj:bitcoinj-core:0.13-SNAPSHOT'
   compile 'org.abstractj.kalium:kalium:0.3.0'
+
+  runtime 'com.madgag.spongycastle:prov:1.51.0.0'
   
   testCompile 'junit:junit:4.11'
 }
