added otp auth for application wallets

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@
 
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'idea'
 
 
 buildscript {
@@ -29,6 +30,7 @@ dependencies {
   compile 'com.google.guava:guava:18.0'
   compile 'org.bitcoinj:bitcoinj-core:0.13-SNAPSHOT'
   compile 'org.abstractj.kalium:kalium:0.3.0'
+  compile 'org.jboss.aerogear:aerogear-otp-java:1.0.0'
 
   runtime 'com.madgag.spongycastle:prov:1.51.0.0'
 
