--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ dependencies {
   compile 'org.abstractj.kalium:kalium:0.3.0'
   compile 'org.jboss.aerogear:aerogear-otp-java:1.0.0'
 
+  compile 'org.bouncycastle:bcpkix-jdk15on:1.52'
+
   runtime 'com.madgag.spongycastle:prov:1.51.0.0'
 
   compile "org.codehaus.groovy:groovy-all:2.4.1"
