--- a/build.gradle
+++ b/build.gradle
@@ -31,8 +31,7 @@ dependencies {
   compile 'org.bitcoinj:bitcoinj-core:0.13-SNAPSHOT'
   compile 'org.abstractj.kalium:kalium:0.3.0'
   compile 'org.jboss.aerogear:aerogear-otp-java:1.0.0'
-
-  runtime 'com.madgag.spongycastle:prov:1.51.0.0'
+  compile 'com.madgag.spongycastle:prov:1.51.0.0'
 
   compile "org.codehaus.groovy:groovy-all:2.4.1"
   testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
